--- a/emailTemplates/accountLockWarning.html
+++ b/emailTemplates/accountLockWarning.html
@@ -1,3 +1,3 @@
 <html>
-	<p>Our records show you have not logged into the NCRT application for $daysSinceLastLogin$ days. Your account will be locked if the number of days exceeds $daysToLock$ days. If you no longer need access to the application, please ignore this email.</p>
+	<p>Our records show you have not logged into the SEMOSS application for $daysSinceLastLogin$ days. Your account will be locked if the number of days exceeds $daysToLock$ days. If you no longer need access to the application, please ignore this email.</p>
 </html>
